<resources>
    <string name="app_name">Shwop</string>
    <string name="your_profile">Your Profile</string>
    <string name="the_right_address_for_shopping_today">The Right Address For Shopping Today</string>
    <string name="if_not_account_register">New user? Sing up here</string>
    <string name="if_already_a_member">Already a member? Log in</string>
    <string name="search_hint">Search...</string>
    <string name="posts">Posts</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">Register a new account</string>
    <string name="login_with_existing_account">Login with an existing account</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="success_registration">Successfully registered account</string>
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_not_a_valid_email">Please enter a valid E-Mail</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="error_invalid_credentials">The E-Mail or password is incorrect</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="choose_image">Choose image</string>
    <string name="enter_post_text">Enter post text...</string>
    <string name="post">Post</string>
    <string name="error_invalid_file">The chosen image is invalid</string>
    <string name="username">Username</string>
    <string name="no_description">No Description</string>
    <string name="description">Description</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="profile_updated">Profile updated</string>
    <string name="no_changes_detected">You didn\'t change anything</string>
    <string name="delete_post_dialog_title">Do you want to delete that post?</string>
    <string name="delete_post_dialog_message">This action cannot be undone.</string>
    <string name="delete_post_dialog_positive">Yes</string>
    <string name="delete_post_dialog_negative">No</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="liked_by_dialog_title">Liked by</string>
    <string name="error_no_image_chosen">Please choose an image for the post</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="comments">Comments</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Me</string>
    <string name="sell">Sell</string>
    <string name="name">name</string>
    <string name="show_your_product">show your product</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="successfully_deleted">successfully deleted product</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="choose_a_language">Choose a Language</string>
    <string name="example_post_text">wow nice jacket</string>
    <string name="loading">Login</string>
    <string name="next_view_pager">Next</string>
    <string name="next_view_pg">Next</string>
    <string name="finish">Finish</string>
    <string name="publish">PUBLISH</string>
</resources>